--- a/style.css
+++ b/style.css
@@ -8,13 +8,20 @@
     scroll-behavior: smooth;
 }
 :root {
-    --bg-clr: #040222;
+    --bg-clr: #03011a;
     --txt-clr: #ffffff;
-    --second-clr: #c4c2cc;
+    --second-clr: #c4c2cc; 
     --main-clr: #e2244d;
-    --big-font: 3.5rem;
-    --h2-font: 2rem;
+    --big-font: 4rem;
+    --h2-font: 2.5rem;
     --p-font: 1.1rem;
+    --shadow: linear-gradient(rgba(202, 202, 202, 0.1) 0%, #ffffff);
+}
+.light-theme{
+    --bg-clr: #ffffff;
+    --txt-clr: #1d1d1d;
+    --second-clr: #535353;
+    --shadow: linear-gradient(rgba(0, 0, 0, 0.5) 0%, #191919);
 }
 body {
     background-color: var(--bg-clr);
@@ -74,7 +81,7 @@ header {
 }
 .top-btn {
     display: inline-block;
-    padding: 9px 30px;
+    padding: 8px 26px;
     background: transparent;
     border: 2px solid var(--main-clr);
     border-radius: 30px;
@@ -89,6 +96,10 @@ header {
     background-color: var(--main-clr);
     border: 2px solid var(--main-clr);
     color: var(--bg-clr);
+}
+#theme-icon{
+    width: 30px;
+    cursor: pointer;
 }
 
 section {
@@ -145,9 +156,9 @@ section {
 .social a:hover {
     transform: scale(1.1);
     background: var(--main-clr);
-    transition: .5s;
+    transition: 0.5s;
 }
-.btn{
+.btn {
     display: inline-block;
     color: var(--bg-clr);
     background: var(--main-clr);
@@ -156,9 +167,9 @@ section {
     font-weight: 500;
     line-height: 24px;
     border-radius: 30px;
-    transition: ease .40s;
+    transition: ease 0.4s;
 }
-.btn:hover{
+.btn:hover {
     transform: scale(1.1);
 }
 .home-img img {
@@ -170,4 +181,118 @@ header.sticky {
     background: var(--bg-clr);
     padding: 13px 10%;
     box-shadow: 0px 0px 10px rgb(0 0 0 / 10%);
+}
+
+.about {
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    align-items: center;
+    grid-gap: 2rem;
+}
+.about-img img {
+    max-width: 100%;
+    width: 500px;
+    height: auto;
+}
+.about-text h2 {
+    font-size: var(--h2-font);
+    font-weight: 500;
+    margin: 8px 0px 25px;
+    line-height: 1.1;
+}
+.about-text h3 {
+    color: var(--main-clr);
+    font-size: 20px;
+    font-weight: 500;
+}
+.about-text p {
+    max-width: 550px;
+    font-size: var(--p-font);
+    color: var(--second-clr);
+    line-height: 28px;
+    margin-bottom: 45px;
+}
+
+.heading {
+    text-align: center;
+}
+.heading h2 {
+    font-size: var(--h2-font);
+    font-weight: 500;
+    margin: 7px 0px 20px;
+    line-height: 1.1;
+}
+.heading h3 {
+    color: var(--main-clr);
+    font-size: 20px;
+    font-weight: 500;
+}
+.heading p {
+    font-size: var(--p-font);
+    color: var(--second-clr);
+    line-height: 28px;
+}
+.portfolio-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, auto));
+    grid-gap: 2rem;
+    align-items: center;
+    margin-top: 5rem;
+    text-align: center;
+    cursor: pointer;
+}
+.col {
+    position: relative;
+}
+.col img {
+    max-width: 100%;
+    width: 550px;
+    height: auto;
+    object-fit: cover;
+    border-radius: 12px;
+}
+.layer {
+    background: transparent;
+    height: 100%;
+    width: 100%;
+    position: absolute; 
+    top: 0;
+    left: 0;
+    border-radius: 12px;
+    transition: all 0.4s;
+}
+.layer:hover { 
+    background: var(--shadow);
+}
+.layer h3{
+    position: absolute;
+    width: 100%;
+    font-size: 25px;
+    font-weight: 500;
+    color: var(--bg-clr);
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%);
+    opacity: 0;
+    transition: all .40s;
+}
+.layer:hover h3{
+    bottom: 52%;
+    opacity: 1;
+}
+.layer h5{
+    position: absolute;
+    width: 100%;
+    font-size: 17px;
+    font-weight: 500;
+    color: var(--bg-clr);
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%);
+    opacity: 0;
+    transition: all .40s;
+}
+.layer:hover h5{
+    bottom: 46%;
+    opacity: 1;
 }
