--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     --big-font: 4rem;
     --h2-font: 2.5rem;
     --p-font: 1.1rem;
+    --nav-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
     --shadow: linear-gradient(rgba(202, 202, 202, 0.1) 0%, #ffffff);
 }
 .light-theme{
@@ -22,6 +23,7 @@
     --txt-clr: #1d1d1d;
     --second-clr: #535353;
     --shadow: linear-gradient(rgba(0, 0, 0, 0.5) 0%, #191919);
+    --nav-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 body {
     background-color: var(--bg-clr);
@@ -180,7 +182,7 @@ section {
 header.sticky {
     background: var(--bg-clr);
     padding: 13px 10%;
-    box-shadow: 0px 0px 10px rgb(0 0 0 / 10%);
+    box-shadow: var(--nav-shadow);
 }
 
 .about {
