--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ section {
     min-height: 100%;
     height: 100%;
     width: 100%;
-    background: var(--bg-img);
+    background-image: var(--bg-img);
     background-size: cover;
     background-position: center;
     position: relative;
@@ -189,7 +189,6 @@ header.sticky {
     padding: 13px 10%;
     box-shadow: var(--nav-shadow);
 }
-
 .items {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(220px, auto));
