--- a/style.css
+++ b/style.css
@@ -44,6 +44,11 @@ header {
     padding: 30px 10%;
     transition: 0.3s;
 }
+header.sticky {
+    background: var(--bg-clr);
+    padding: 13px 10%;
+    box-shadow: var(--nav-shadow);
+}
 .logo {
     font-size: 24px;
     color: var(--txt-clr);
@@ -184,11 +189,6 @@ section {
     width: 500px;
     height: auto;
 }
-header.sticky {
-    background: var(--bg-clr);
-    padding: 13px 8%;
-    box-shadow: var(--nav-shadow);
-}
 .items {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(220px, auto));
@@ -228,7 +228,7 @@ header.sticky {
 
 .about {
     display: grid;
-    grid-template-columns: repeat(2, 2fr);
+    grid-template-columns: repeat(2, 1fr);
     align-items: center;
     grid-gap: 2rem;
 }
@@ -240,7 +240,7 @@ header.sticky {
 .about-text h2 {
     font-size: var(--h2-font);
     font-weight: 500;
-    margin: 8px 0px 25px;
+    /* margin: 8px 0px 25px; */
     line-height: 1.1;
 }
 .about-text h3 {
@@ -249,7 +249,7 @@ header.sticky {
     font-weight: 500;
 }
 .about-text p {
-    max-width: 550px;
+    /* max-width: 550px; */
     font-size: var(--p-font);
     color: var(--second-clr);
     line-height: 28px;
@@ -283,7 +283,7 @@ header.sticky {
     margin-top: 5rem;
     text-align: center;
 }
-.col {
+/* .col {
     position: relative;
     overflow: hidden;
     border-radius: 12px;
@@ -291,13 +291,13 @@ header.sticky {
 }
 .col img {
     max-width: 100%;
-    width: 550px;
-    height: 380px;
+    width: 580px;
+    height: 420px;
     object-fit: fill;
     border-radius: 12px;
     transition: all 0.4s;
-}
-.col:hover img {
+} */
+/* .col:hover img {
     transform: scale(1.1);
 }
 .layer {
@@ -366,14 +366,15 @@ header.sticky {
     color: var(--bg-clr);
     bottom: 0;
     left: 50%;
-    transform: translate(-50%);
+    transform: translate(-50%) scale(0);
     opacity: 0;
     transition: all 0.4s;
 }
 .layer:hover div {
+    transform: translate(-50%) scale(1);
     bottom: 15%;
     opacity: 1;
-}
+} */
 .layer div a {
     display: inline-block;
     background: transparent;
@@ -382,15 +383,15 @@ header.sticky {
     border: 2px solid var(--main-clr);
     font-size: 20px;
     font-weight: 500;
-    color: var(--bg-clr);
+    color: var(--txt-clr);
     transition: ease 0.5s;
 }
 .layer div a:hover {
     transform: scale(1.1);
     background-color: var(--main-clr);
-    border: 2px solid var(--main-clr);
-    color: var(--txt-clr);
-}
+    border: 2px solid var(--main-clr); 
+    color: var(--bg-clr);
+} 
 
 .cta-box {
     display: grid;
@@ -436,6 +437,136 @@ header.sticky {
     letter-spacing: 1px;
 }
 
+
+/* This section is for portfolio */
+@media (min-width: 950px){
+    .col {
+        position: relative;
+        overflow: hidden;
+        border-radius: 12px;
+        height: 300px;
+    }
+    .col img {
+        max-width: 100%;
+        width: 580px;
+        height: 420px;
+        object-fit: fill;
+        border-radius: 12px;
+        transition: all 0.4s;
+    }
+    .col:hover img {
+        transform: scale(1.1);
+    }
+    .layer {
+        background: transparent;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-radius: 12px;
+        transition: all 0.4s;
+        overflow: hidden;
+    }
+    .layer:hover {
+        background: var(--shadow);
+    }
+    .layer h3 {
+        position: absolute;
+        width: 90%;
+        font-size: 25px;
+        font-weight: 500;
+        color: var(--bg-clr);
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%);
+        opacity: 0;
+        transition: all 0.4s;
+    }
+    .layer:hover h3 {
+        bottom: 75%;
+        opacity: 1;
+    }
+    .layer h5 {
+        position: absolute;
+        width: 90%;
+        font-size: 17px;
+        font-weight: 500;
+        color: var(--bg-clr);
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%);
+        opacity: 0;
+        transition: all 0.4s;
+    }
+    .layer:hover h5:nth-child(2) {
+        bottom: 50%;
+        opacity: 1;
+    }
+    .layer:hover h5:nth-child(3) {
+        bottom: 38%;
+        opacity: 1;
+    }
+    .layer:hover h5:nth-child(3) span {
+        font-weight: bold;
+        color: var(--main-clr);
+    }
+    .layer div {
+        position: absolute;
+        width: 80%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 50px;
+        font-size: 17px;
+        font-weight: 500;
+        color: var(--bg-clr);
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%) scale(0);
+        opacity: 0;
+        transition: all 0.4s;
+    }
+    .layer:hover div {
+        transform: translate(-50%) scale(1);
+        bottom: 15%;
+        opacity: 1;
+    }
+    .layer div a {
+        display: inline-block;
+        background: transparent;
+        padding: 4px 22px;
+        border-radius: 20px;
+        border: 2px solid var(--main-clr);
+        font-size: 20px;
+        font-weight: 500;
+        color: var(--bg-clr);
+        transition: ease 0.5s;
+    }
+    .layer div a:hover {
+        transform: scale(1.1);
+        background-color: var(--main-clr);
+        border: 2px solid var(--main-clr); 
+        color: var(--txt-clr);
+    } 
+}
+@media (max-width: 949px){
+    .portfolio-content{
+        display: flex;
+        flex-direction: column;
+    }
+    .col{
+        display: grid;
+        grid-template-columns: repeat(2, 0.9fr);
+        gap: 2rem;
+        text-align: left;
+    }
+    .col img{
+        width: 100%;
+        height: auto;
+    }
+} 
+
 @media (max-width: 1300px) {
     header {
         padding: 16px 3%;
@@ -448,6 +579,9 @@ header.sticky {
     section {
         padding: 70px 3%;
         transition: 0.3s;
+    }
+    .portfolio-content {
+        grid-template-columns: repeat(2, 1fr);
     }
     :root {
         --big-font: 3.1rem;
@@ -490,7 +624,10 @@ header.sticky {
     }
     .navlist.active{
         top: 100%;
-
+    }
+    .portfolio-content {
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 2rem;
     }
 }
 
