--- a/style.css
+++ b/style.css
@@ -8,24 +8,16 @@
     scroll-behavior: smooth;
 }
 :root {
-    --bg-clr: #f7f7f7;
-    --txt-clr: #1d1d1d;
-    --second-clr: #535353;
-    --shadow: linear-gradient(rgba(29, 29, 29, 0.75) 0%, #000000);
-    --nav-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-    --bg-img: url(../img/background.jpg);
-    --main-clr: #e2244d;
-    --big-font: 4rem;
-    --h2-font: 2.5rem;
-    --p-font: 1.1rem;
-}
-.dark-theme {
     --bg-clr: #03011a;
     --txt-clr: #ffffff;
     --second-clr: #c4c2cc;
     --nav-shadow: 0px 0px 10px rgba(255, 255, 255, 0.3);
     --shadow: linear-gradient(rgba(226, 226, 226, 0.75) 0%, #ffffff);
-    --bg-img: none;
+    --bg-img: url(../img/background.jpg);
+    --main-clr: #e2244d;
+    --big-font: 4rem;
+    --h2-font: 2.5rem;
+    --p-font: 1.1rem;
 }
 body {
     background-color: var(--bg-clr);
@@ -46,7 +38,7 @@ header {
 }
 header.sticky {
     background: var(--bg-clr);
-    padding: 13px 10%;
+    padding: 16px 10%;
     box-shadow: var(--nav-shadow);
 }
 .logo {
@@ -88,24 +80,6 @@ header.sticky {
     cursor: pointer;
     display: none;
 }
-.top-btn {
-    display: inline-block;
-    padding: 8px 26px;
-    background: transparent;
-    border: 2px solid var(--main-clr);
-    border-radius: 30px;
-    color: var(--txt-clr);
-    letter-spacing: 1px;
-    font-size: var(--p-font);
-    font-weight: 500;
-    transition: ease 0.5s;
-}
-.top-btn:hover {
-    transform: scale(1.1);
-    background-color: var(--main-clr);
-    border: 2px solid var(--main-clr);
-    color: var(--bg-clr);
-}
 #theme-icon {
     width: 30px;
     cursor: pointer;
@@ -118,9 +92,6 @@ section {
     min-height: 100%;
     height: 100%;
     width: 100%;
-    background-image: var(--bg-img);
-    background-size: cover;
-    background-position: center;
     position: relative;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -196,18 +167,18 @@ section {
     align-items: center;
     text-align: center;
 }
-.sub-box {
+.sub-box, .tech {
     padding: 45px;
     transition: ease 0.5s;
     cursor: pointer;
 }
-.sub-img img {
+.sub-img img{
     max-width: 100%;
     width: 60px;
     height: auto;
     margin-bottom: 20px;
 }
-.sub-box h3 {
+.sub-box h3, .tech h3 {
     margin-bottom: 20px;
     font-size: 24px;
     font-weight: 500px;
@@ -217,7 +188,7 @@ section {
     color: var(--second-clr);
     line-height: 29px;
 }
-.sub-box:hover {
+.sub-box:hover, .tech:hover {
     background: var(--bg-clr);
     box-shadow: var(--nav-shadow);
     border-radius: 12px;
@@ -275,15 +246,16 @@ section {
     color: var(--second-clr);
     line-height: 28px;
 }
+
 .portfolio-content {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, auto));
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 5rem;
     align-items: center;
     margin-top: 5rem;
     text-align: center;
 }
-/* .col {
+.col {
     position: relative;
     overflow: hidden;
     border-radius: 12px;
@@ -296,8 +268,8 @@ section {
     object-fit: fill;
     border-radius: 12px;
     transition: all 0.4s;
-} */
-/* .col:hover img {
+}
+.col:hover img {
     transform: scale(1.1);
 }
 .layer {
@@ -374,7 +346,7 @@ section {
     transform: translate(-50%) scale(1);
     bottom: 15%;
     opacity: 1;
-} */
+}
 .layer div a {
     display: inline-block;
     background: transparent;
@@ -383,15 +355,28 @@ section {
     border: 2px solid var(--main-clr);
     font-size: 20px;
     font-weight: 500;
-    color: var(--txt-clr);
+    color: var(--bg-clr);
     transition: ease 0.5s;
 }
 .layer div a:hover {
     transform: scale(1.1);
     background-color: var(--main-clr);
-    border: 2px solid var(--main-clr); 
-    color: var(--bg-clr);
-} 
+    border: 2px solid var(--main-clr);
+    color: var(--txt-clr);
+}
+
+.skill-container {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 3rem;
+    align-items: center;
+    text-align: center;
+}
+.tech img{
+    width: 120px;
+    height: 120px;
+}
 
 .cta-box {
     display: grid;
@@ -426,146 +411,14 @@ section {
 .wrap p {
     font-size: var(--p-font);
 }
-
-
-.ends{
+.ends {
     text-align: center;
     padding: 40px;
 }
-.ends p{
+.ends p {
     font-size: var(--p-font);
     letter-spacing: 1px;
 }
-
-
-/* This section is for portfolio */
-@media (min-width: 950px){
-    .col {
-        position: relative;
-        overflow: hidden;
-        border-radius: 12px;
-        height: 300px;
-    }
-    .col img {
-        max-width: 100%;
-        width: 580px;
-        height: 420px;
-        object-fit: fill;
-        border-radius: 12px;
-        transition: all 0.4s;
-    }
-    .col:hover img {
-        transform: scale(1.1);
-    }
-    .layer {
-        background: transparent;
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        border-radius: 12px;
-        transition: all 0.4s;
-        overflow: hidden;
-    }
-    .layer:hover {
-        background: var(--shadow);
-    }
-    .layer h3 {
-        position: absolute;
-        width: 90%;
-        font-size: 25px;
-        font-weight: 500;
-        color: var(--bg-clr);
-        bottom: 0;
-        left: 50%;
-        transform: translate(-50%);
-        opacity: 0;
-        transition: all 0.4s;
-    }
-    .layer:hover h3 {
-        bottom: 75%;
-        opacity: 1;
-    }
-    .layer h5 {
-        position: absolute;
-        width: 90%;
-        font-size: 17px;
-        font-weight: 500;
-        color: var(--bg-clr);
-        bottom: 0;
-        left: 50%;
-        transform: translate(-50%);
-        opacity: 0;
-        transition: all 0.4s;
-    }
-    .layer:hover h5:nth-child(2) {
-        bottom: 50%;
-        opacity: 1;
-    }
-    .layer:hover h5:nth-child(3) {
-        bottom: 38%;
-        opacity: 1;
-    }
-    .layer:hover h5:nth-child(3) span {
-        font-weight: bold;
-        color: var(--main-clr);
-    }
-    .layer div {
-        position: absolute;
-        width: 80%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 50px;
-        font-size: 17px;
-        font-weight: 500;
-        color: var(--bg-clr);
-        bottom: 0;
-        left: 50%;
-        transform: translate(-50%) scale(0);
-        opacity: 0;
-        transition: all 0.4s;
-    }
-    .layer:hover div {
-        transform: translate(-50%) scale(1);
-        bottom: 15%;
-        opacity: 1;
-    }
-    .layer div a {
-        display: inline-block;
-        background: transparent;
-        padding: 4px 22px;
-        border-radius: 20px;
-        border: 2px solid var(--main-clr);
-        font-size: 20px;
-        font-weight: 500;
-        color: var(--bg-clr);
-        transition: ease 0.5s;
-    }
-    .layer div a:hover {
-        transform: scale(1.1);
-        background-color: var(--main-clr);
-        border: 2px solid var(--main-clr); 
-        color: var(--txt-clr);
-    } 
-}
-@media (max-width: 949px){
-    .portfolio-content{
-        display: flex;
-        flex-direction: column;
-    }
-    .col{
-        display: grid;
-        grid-template-columns: repeat(2, 0.9fr);
-        gap: 2rem;
-        text-align: left;
-    }
-    .col img{
-        width: 100%;
-        height: auto;
-    }
-} 
 
 @media (max-width: 1300px) {
     header {
@@ -580,90 +433,42 @@ section {
         padding: 70px 3%;
         transition: 0.3s;
     }
-    .portfolio-content {
-        grid-template-columns: repeat(2, 1fr);
-    }
-    :root {
-        --big-font: 3.1rem;
-        --h2-font: 2rem;
-        --p-font: 1rem;
-        transition: 0.3s;
-    }
 }
 
 @media (max-width: 1000px) {
-    #menu-icon{
+    #menu-icon {
         display: block;
     }
-    .home{
+    .home {
         min-height: 80vh;
     }
-    .navlist{
+    .navlist {
         position: absolute;
-        top: -600px;
+        top: -700px;
         left: 0;
         right: 0;
         flex-direction: column;
         background: var(--main-clr);
         text-align: right;
-        transition: all .40s;
+        transition: all 0.4s;
     }
-    .navlist a{
+    .navlist a {
         display: block;
         padding: 1.2rem;
         margin: 1.5rem;
         border-right: 2px solid var(--bg-clr);
         color: var(--bg-clr);
     }
-    .navlist a:hover{
+    .navlist a:hover {
         background: var(--bg-clr);
         color: var(--main-clr);
     }
-    .navlist a::after{
+    .navlist a::after {
         display: none;
     }
-    .navlist.active{
+    .navlist.active {
         top: 100%;
     }
-    .portfolio-content {
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 2rem;
-    }
 }
 
-@media (max-width: 875px){
-    .home{
-        grid-template-columns: 1fr;
-        min-height: 130vh;
-        grid-gap: 1rem;
-    }
-    .home-text{
-        padding-top: 55px;
-    }
-    .home-img{
-        text-align: center;
-    }
-    .home-img img{
-        width: 420px;
-        height: auto;
-    }
-    .about{
-        grid-template-columns: 1fr;
-    }
-    .about-img{
-        text-align: center;
-        margin-bottom: 30px;
-    }
-    :root{
-        --big-font:2.8rem;
-        --h2-font: 1.8rem
-    }
-    section{
-        padding: 65px 3%;
-        transition: .3s;
-    }
-}
 
-@media (max-width: 540px){
-
-}
