--- a/style.css
+++ b/style.css
@@ -486,15 +486,6 @@ input::placeholder{
         --h2-font: 2.1rem;
         --p-font: 1.1rem;
     }
-    .home {
-        grid-template-columns: repeat(1, 1fr);
-    }
-    .home-img{
-        display: flex;
-        justify-content: center;
-        width: 400px;
-        margin: auto;
-    }
     .about{
         grid-template-columns: repeat(1, 1fr);
     }
@@ -504,6 +495,17 @@ input::placeholder{
     }
 }
 @media (max-width: 600px) {
+    .home {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .home-img{
+        display: flex;
+        justify-content: center;
+        margin: auto;
+    }
+    .home-img ing{
+        width: 75%;
+    }
     .col {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
