--- a/style.css
+++ b/style.css
@@ -173,13 +173,14 @@ section {
     transition: ease 0.5s;
     cursor: pointer;
 }
-.sub-img img{
+.sub-img img {
     max-width: 100%;
     width: 60px;
     height: auto;
     margin-bottom: 20px;
 }
-.sub-box h3, .tech h3 {
+.sub-box h3,
+.tech h3 {
     margin-bottom: 20px;
     font-size: 24px;
     font-weight: 500px;
@@ -189,7 +190,8 @@ section {
     color: var(--second-clr);
     line-height: 29px;
 }
-.sub-box:hover, .tech:hover {
+.sub-box:hover,
+.tech:hover {
     background: var(--bg-clr);
     box-shadow: var(--nav-shadow);
     border-radius: 12px;
@@ -209,7 +211,7 @@ section {
     width: 500px;
     height: auto;
 }
-.about-text{
+.about-text {
     display: grid;
     gap: 10px;
 }
@@ -270,25 +272,25 @@ section {
     object-fit: fill;
     border-radius: 12px;
 }
-.layer{
+.layer {
     padding: 10px;
     display: grid;
     gap: 10px;
 }
-.layer h3{
+.layer h3 {
     font-size: 22px;
 }
-.layer p{
+.layer p {
     font-size: var(--p-font);
     color: var(--second-clr);
 }
-.layer p:nth-child(3){
+.layer p:nth-child(3) {
     color: var(--txt-clr);
 }
-.layer p:nth-child(3) span{
+.layer p:nth-child(3) span {
     color: var(--main-clr);
 }
-.layer div{
+.layer div {
     margin-top: 10px;
     display: flex;
     justify-content: space-between;
@@ -323,7 +325,7 @@ section {
     transition: ease 0.5s;
     cursor: pointer;
 }
-.tech img{
+.tech img {
     width: 120px;
     height: 120px;
 }
@@ -374,19 +376,20 @@ section {
     margin-top: 50px;
 } */
 
-.form{
+.form {
     width: 100%;
     margin-top: 50px;
     display: flex;
     justify-content: center;
 }
-form{
+form {
     display: flex;
     flex-direction: column;
     width: 500px;
     gap: 20px;
 }
-input, textarea{
+input,
+textarea {
     padding: 10px 20px;
     border-radius: 12px;
     font-size: var(--p-font);
@@ -394,7 +397,8 @@ input, textarea{
     color: var(--txt-clr);
     border: 1px solid white;
 }
-input::placeholder, textarea::placeholder{
+input::placeholder,
+textarea::placeholder {
     font-size: var(--p-font);
 }
 
@@ -434,6 +438,10 @@ input::placeholder, textarea::placeholder{
         min-height: 80vh;
     }
     .navlist {
+        height: 50px;
+        overflow: auto;
+    }
+    .navlist {
         position: absolute;
         height: 85vh;
         top: -700px;
@@ -462,9 +470,9 @@ input::placeholder, textarea::placeholder{
     .navlist.active {
         top: 100%;
     }
-} 
+}
 
-@media (max-width: 900px){
+@media (max-width: 900px) {
     .portfolio-content {
         grid-template-columns: repeat(1, 1fr);
     }
@@ -472,13 +480,13 @@ input::placeholder, textarea::placeholder{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
-    .col img{
+    .col img {
         height: 100%;
     }
-    .skill-container{
+    .skill-container {
         grid-template-columns: repeat(3, 1fr);
     }
-    .tech img{
+    .tech img {
         width: 80px;
         height: 80px;
     }
@@ -489,16 +497,16 @@ input::placeholder, textarea::placeholder{
         grid-template-columns: repeat(2, 1fr);
     }
 }
-@media (max-width: 767px){
+@media (max-width: 767px) {
     :root {
         --big-font: 3.2rem;
         --h2-font: 2.1rem;
         --p-font: 1.1rem;
     }
-    .about-content{
+    .about-content {
         grid-template-columns: repeat(1, 1fr);
     }
-    .about-img{
+    .about-img {
         display: flex;
         justify-content: center;
     }
@@ -507,25 +515,25 @@ input::placeholder, textarea::placeholder{
     .home {
         grid-template-columns: repeat(1, 1fr);
     }
-    .home-img{
+    .home-img {
         display: flex;
         justify-content: center;
         margin: auto;
     }
-    .home-img img{
+    .home-img img {
         width: 75%;
     }
     .col {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
     }
-    .col img{
+    .col img {
         height: 100%;
     }
-    .skill-container{
+    .skill-container {
         grid-template-columns: repeat(2, 1fr);
     }
-    .tech img{
+    .tech img {
         width: 100px;
         height: 100px;
     }
@@ -537,27 +545,26 @@ input::placeholder, textarea::placeholder{
     }
 }
 
-@media (max-width:400px){
+@media (max-width: 400px) {
     :root {
         --big-font: 2.4rem;
         --h2-font: 1.7rem;
         --p-font: 1rem;
     }
-    .home-img{
+    .home-img {
         width: 320px;
     }
-    .tech img{
+    .tech img {
         width: 40px;
         height: 40px;
     }
-    .tech h3{
+    .tech h3 {
         font-size: 16px;
     }
-    .home-img img{
+    .home-img img {
         width: 250px;
     }
-    form{
+    form {
         width: 320px;
     }
 }
-
