added github Calender

--- a/style.css
+++ b/style.css
@@ -125,10 +125,9 @@ section {
     line-height: 28px;
     margin-bottom: 20px;
 }
-#mobile{
-    margin-bottom: 20px;
-    
-}
+/* #mobile{
+    margin-bottom: 20px;    
+} */
 .social a {
     width: 35px;
     height: 35px;
