--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@
     --h2-font: 2.5rem;
     --p-font: 1.1rem;
 }
+#mobile{
+    color: var(--main-clr);
+}
 body {
     background-color: var(--bg-clr);
     color: var(--txt-clr);
@@ -125,9 +128,6 @@ section {
     line-height: 28px;
     margin-bottom: 20px;
 }
-/* #mobile{
-    margin-bottom: 20px;    
-} */
 .social a {
     width: 35px;
     height: 35px;
@@ -402,7 +402,10 @@ section {
     width: 100%;
     margin-top: 50px;
     display: flex;
+    flex-direction: column;
+    gap: 30px;
     justify-content: center;
+    align-items: center;
 }
 form {
     display: flex;
