updated the resume

--- a/style.css
+++ b/style.css
@@ -516,8 +516,8 @@ textarea:focus {
     }
     .navlist {
         position: absolute;
-        height: 85vh;
-        top: -700px;
+        height: calc(100vh - 67px);
+        top: -100vh;
         left: 0;
         right: 0;
         flex-direction: column;
@@ -525,6 +525,7 @@ textarea:focus {
         background: var(--main-clr);
         text-align: right;
         transition: all 0.4s;
+        overflow: auto;
     }
     .navlist a {
         display: block;
