--- a/style.css
+++ b/style.css
@@ -606,6 +606,7 @@ textarea:focus {
         height: 100%;
     }
     .home-img {
+        margin-top: 0;
         display: flex;
         justify-content: center;
         margin: auto;
